@@ -1,20 +1,22 @@
 package config;
 
-import java.util.HashMap;
-import java.util.stream.Collectors;
+import lombok.Getter;
 
+import java.util.Map;
+
+@Getter
 public class TargetResources {
-    public HashMap<String, String> resources;
+    private Map<String, String> resources;
 
-    public TargetResources(HashMap<String, String> resources) {
+    public TargetResources(Map<String, String> resources) {
         this.resources = resources;
     }
 
-    public HashMap<String, String> getResources() {
+    public Map<String, String> getResources() {
         return resources;
     }
 
-    public void setResources(HashMap<String, String> resources) {
+    public void setResources(Map<String, String> resources) {
         this.resources = resources;
     }
 
@@ -22,8 +24,8 @@ public class TargetResources {
     public String toString() {
         return "TargetResources{" +
                 "resources=" + resources.keySet().stream()
-                .map(key -> key + ": " + resources.get(key) + ", ")
-                .collect(Collectors.toList())
+                .map(key -> key + ": " + resources.get(key) + ", \n")
+                .toList()
                 + '}';
     }
 }
